added footer section

--- a/index.html
+++ b/index.html
@@ -234,9 +234,31 @@
             </div>
           </div>
         </div>
+        <p id="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
+      </section>
+      <!-- Feature Section -->
+      <section class="features display-flex">
+        <div class="img-area">
+          <img src="./images/gear.png" alt="">
+        </div>
+        <div class="right-area-text">
+          <h2>Featured products at one place</h2>
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim
+            velit
+            mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <button id="btn-join-now">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
       </section>
     </main>
+    <!-- footer area start -->
+    <footer>
+      <h5>Influencer products</h5>
+      <p><small>Copyright © 2020 influencer products</small></p>
+      <p><small>All rights reserved</small></p>
+      <div class="icon-set">
 
+      </div>
+    </footer>
 </body>
 
 </html>
