added product page

--- a/products.html
+++ b/products.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Influencer Gear</title>
-  <link rel="shortcut icon" href="./logos/influencer-favicon.png" type="image/x-icon">
+  <title>Products</title>
+  <link rel="shortcut icon" href="./logos/product-page-fav.png" type="image/x-icon">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -32,31 +33,10 @@
         </ul>
       </div>
     </nav>
-    <!-- Banner area style -->
-    <div class="banner display-flex">
-      <div class="banner-left-arae">
-        <h1>Start your Journey as
-          Influencer</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
-          faucibus.</p>
-        <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
-      </div>
-      <div class="banner-image-area">
-        <img src="./images/main-camera.png" alt="">
-      </div>
-    </div>
+    <hr style="width: 75%; margin: 0 auto; margin-bottom: 50px; ">
     </header>
+
     <main>
-      <!-- logo area start -->
-      <section class="logo-area display-flex">
-        <img src="./logos/Alibaba.svg" alt="">
-        <img src="./logos/Amazon.svg" alt="">
-        <img src="./logos/Daraz.pk Logo.svg" alt="">
-        <img src="./logos/Ebay.svg" alt="">
-        <img src="./logos/Rakuten.svg" alt="">
-        <img src="./logos/Walmart.svg" alt="">
-        <img src="./logos/Target.svg" alt="">
-      </section>
       <!-- Popular Collection area -->
       <section class="collections">
         <h3>Popular Collection</h3>
@@ -236,20 +216,9 @@
         </div>
         <p id="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
       </section>
-      <!-- Feature Section -->
-      <section class="features display-flex">
-        <div class="img-area">
-          <img src="./images/gear.png" alt="">
-        </div>
-        <div class="right-area-text">
-          <h2>Featured products at one place</h2>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim
-            velit
-            mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-          <button id="btn-join-now">Join Now <i class="fa-solid fa-arrow-right"></i></button>
-        </div>
-      </section>
     </main>
+
+
     <!-- footer area start -->
     <footer>
       <h5>Influencer products</h5>
@@ -259,6 +228,7 @@
 
       </div>
     </footer>
+
 </body>
 
 </html>
