--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
     <main>
       <!-- Popular Collection area -->
       <section class="collections">
-        <h3>Popular Collection</h3>
+        <h3>Our Collection</h3>
 
         <div class="products-area display-flex">
           <div class="product">
